# aton-format

./: .gitignore  CHANGELOG.md  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  setup.py
examples/: ADVANCED_EXAMPLES.md  EXAMPLES.md  VISUAL_COMPARISON.md  complete_demo.py  practical_examples.py
src/aton_format/: __init__.py  exceptions.py  version.py
src/aton_format/compression/: __init__.py  algorithms.py  engine.py  modes.py
src/aton_format/core/: __init__.py  decoder.py  encoder.py  types.py
src/aton_format/query/: __init__.py  engine.py  operators.py  parser.py
src/aton_format/streaming/: __init__.py  encoder.py
tests/: OLLAMA_TEST_GUIDE.md  README.md  conftest.py  quick_ollama_test.py  test_basic.py  test_compression.py  test_core_types.py  test_decoder.py  test_encoder.py  test_exceptions.py  test_integration.py  test_ollama.py  test_query.py  test_streaming.py
webapp-aton/: aton.js  aton_v2.js  documentation.html  index.html  test-schema.html  whitepaper.html
